Changes made between Gamera File Releases
=========================================

Version 3.4.1, May 28, 2014
----------------------------

 - ported to Windows again with MS VC and included compile instructions

 - new plugins:
    o kise_block_extraction in pagesegmentation
    o kernel_density, argmax, argmin in listutilities
    o soft_threshold in binarization

 - new features and feature improvements:
    o Fourier descriptors implemented based on EURASIP JASP 2013 paper
    o moments, zernike_moments, and diagonal_projection no longer
      produce division by zero error on empty images
    o bug fixed in zernike_moments that made the feature less useful

 - fixed a memory leak when image positions are given as sequence
   (Debian Bug report #747548 from 2014-05-09)

 - new option "iterations" for bbox_merging and significant speedup

 - new options for outline() and contour_samplepoints()

 - graph_color_ccs did not work when only one Cc given

 - export/import to/from OpenCV images

 - interactive classifier: "Unckeck all" button in
   "Change feature set" dialogue

 - args dialogue sizes now dynamically computed

 - all user provided filenames (training XML files etc) converted
   to unicode to allow for arbitrary filenames

 - new argument 'unique' for graph_color_ccs based on IVAPP 2013 paper

 - node.nodes() in graph API now works

 - option --nowx for setup.py to install without wxPython


Version 3.4.0, Nov 20, 2012
----------------------------

 - GA optimization module rewritten from scratch
     o evolutionary optimization now for selection and weighting implemented
     o replacement of used library (GALib was replaced by EO)
     o optimization process is now highly configurable
     o fitness evaluation is now parallelizable
   (thanks to Tobias Bolten)

 - knncoremodule splitted in header and implementation file

 - feature normalization for noninteractive classifier now works
